--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class=""></div>
+  <div class="wrap">
+    <div class="container">
+      <img src="images/1.png" alt="">
+      <img src="images/tone.gif" alt="">
+    </div>
+  </div>
 </body>
 </html>
