--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
   <div class="wrap">
     <div class="container">
       <img src="images/1.png" alt="">
-      <img src="images/tone.gif" alt="">
-      <img src="images/2.png" alt="" >
+      <img src="images/1gif.gif" alt="" style="margin-bottom: 150px;">
+      <img src="images/2.png" alt="" style="margin-bottom: 150px;">
+      <img src="images/2gif.gif" alt="" style="margin-bottom: 200px;">
+      <img src="images/3gif.gif" alt="" style="margin-bottom: 200px;">
+      <img src="images/3.png" alt="">
+      <img src="images/4gif.gif" alt="" style="margin-bottom: 200px;">
+      <img src="images/4.png" alt="">
       <p>
         "<br>
         여름만 되면 심해지는<br>
@@ -20,18 +25,24 @@
         효과만 생각하고 만들었습니다.<br>
         "
       </p>
-      <img src="images/3.png" alt="">
-      <img src="images/2gif.gif" alt="" style="margin-bottom: 150px;">
-      <img src="images/4.png" alt="" >
-      <img src="images/3gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/5.png" alt="" style="" >
+      <img src="images/5.png" alt="" style="margin-bottom: 150px;">
+      <p>왜 비타민C에요?</p>
+      <img src="images/6.png" alt="" >
+      <img src="images/5gif.gif" alt="" style="margin-top: 150px; margin-bottom: 200px;" >
+      <img src="images/7.png" alt="" style="margin-bottom: 200px;">
+      <img src="images/6gif.gif" alt="">
+      <img src="images/8.png" alt="" style="margin-bottom: 200px;">
+      <img src="images/7gif.gif" alt="" style="" >
       <p>
         비타민C가 함유된 화장품은 유통기한이 1년입니다.<br>
         보통의 화장품들은 대부분 유통기한이 2~3년인데<br>
         비타민C는 신선도가 저하되면 효과가 없는 것과 다름 없기에<br>
         유통기한이 다른 화장품들에 비해 훨씬 짧습니다<br>
         </p>
-      <img src="images/6.png" alt="" style="margin-top: 150px;" >
+      <img src="images/9.png" alt="" style="margin-top: 150px;" >
+      <img src="images/8gif.gif" alt="" style="margin-top: 150px;" >
+      <img src="images/9gif.gif" alt="" style="margin-top: 150px;" >
+      <img src="images/10.png" alt="" style="margin-top: 150px;" >
       <p>
         어반앤 비타민-씨즌 프레쉬 앰플은<br>
         계절별 피부 고민에 맞춰<br>
@@ -41,47 +52,61 @@
         미리 만들어주는 화장품이 아닙니다.<br>
         비타민C 제품은 꼭 신선하게 사용하셔야 돼요!
         </p>
-      <img src="images/7.png" alt="" style="margin-top: 150px;" >
+      <img src="images/11.png" alt="" style="margin-top: 150px;" >
       <p>
         연꽃잎과 매실의 조합!<br>
         그린 솔루션으로 여름 피부 케어 공략!<br>
       </p>
-      <img src="images/8.png" alt="" style="" >
-      <img src="images/9.png" alt="" style="margin-top: 150px;" >
-      <img src="images/4gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/10.png" alt="" style="margin-top: 150px;" >
+      <img src="images/12.png" alt="" style="margin-bottom: 200px;">
+      <img src="images/13.png" alt="" style="margin-top: 150px;" >
+      <img src="images/10gif.gif" alt="" style="margin-top: 150px;" >
+      <img src="images/11gif.gif" alt="" style="margin-top: 150px;" >
+      <img src="images/14.png" alt="" style="margin-top: 150px;" >
       <p>
       제조된 순간부터 산화가 빠르게 진행되는 비타민C는<br>
       물과 만나는 순간 더욱 빠르게 산화가 진행되며 신선도 및 효과가 저하됩니다.<br><br>
       게다가 다른 성분에 비해 비싼 원료 가격으로 인해 이익을 챙기기 위해서<br>
       산화를 막지 못하는 저렴한 플라스틱 용기를 선택하기도 합니다.
       </p>
-      <img src="images/11.png" alt="" style="margin-top: 150px;" >
-      <img src="images/12.png" alt="" style="margin-top: 150px;" >
-      <img src="images/13.png" alt="" style="margin-top: 150px;" >
-      <video src="images/5gif.mp4" autoplay loop muted style="margin-top: 150px;"></video>
+      <img src="images/15.png" alt="" style="margin-top: 150px;" >
       <p>
-        비타민C가 함유된 화장품에 아무리 좋은 성분을 가득 넣어도<br>
+        원가를 절감하기 위해 사용되는<br>
+        진짜 비타민C가 아닌 비타민 유도체!<br><br>
+        화장품에 사용디는 비타민C 성분은 크게 '순수비타민C'와<br>
+        '비타민C유도체' 두 가지 종류로 나누어집니다.<br>
+        비타민C유도체는 '아스코빌글루코사이드'','아스코빌팔미테이트'<br>
+        '에칠아스코빌에텔','소듐아스코빌포스페이트'등으로 표기됩니다.
+        </p>
+        <img src="images/16.png" alt="" style="margin-top: 150px; margin-bottom: 200px;" >
+        <img src="images/17.png" alt="" style="margin-top: 150px;" >
+        <img src="images/12gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
+        <p>
+          비타민C가 함유된 화장품에 아무리 좋은 성분을 가득 넣어도<br>
         물이 섞인다면 효능이 파괴되고 산화가 빠르게 진행되어<br>
         시간이 지나면 일정한 농도 유지가 어려워서<br>
         비타민C의 제 기능과 효과를 발휘하기가 어려워집니다.
         </p>
-        <img src="images/14.png" alt="" style="margin-top: 150px;" >
-        <img src="images/6gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
-        <img src="images/15.png" alt="" style="margin-top: 150px;" >
-        <img src="images/7gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
-        <img src="images/16.png" alt="" style="margin-top: 150px;" >
-        <img src="images/8gif.gif" alt="" style="margin-top: 150px; " >
+        <img src="images/18.png" alt="" style="margin-top: 150px;" >
+        <img src="images/13gif.gif" alt="" style="margin-top:20px; margin-bottom: 20px;">
+        <img src="images/19.png" alt="" >
+        <img src="images/14gif.gif" alt="" style="margin-top: 200px;margin-bottom: 200px; width: 100%;" >
+        <img src="images/20.png" alt="" style="margin-top: 150px;" >
+        <img src="images/15gif.gif" alt="" style="margin-top: 20px; width: 100%;" >
         <p>
           물은 피부에 닿았을 때 빠르게 증발하여<br>
           과량의 비타민C만 피부 겉 표면에 남게 됩니다.<br>
           피부 겉 표면에 남은 비타민C는 자극을 줄 수 있기에<br>
-          피부에 스며들기 이전에 비타민 앰플은 증발하면 안됩니다<br>
-          어반앤 비타민-씨즌 앰플은 워터리스 시스템을 통해<br>
-          피부에 효과적으로 스며들 수 있도록 만들었습니다
+          피부에 스며들기 이전에 비타민 앰플은 증발하면 안됩니다
         </p>
-        <img src="images/17.png" alt="" style="margin-top: 150px;" >
-        <img src="images/18.png" alt="" style="margin-top: 150px;" >
+        <img src="images/16gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
+        <img src="images/21.png" alt="" style="margin-top: 150px;" >
+        <p>
+          <b>비타민은 따갑고 화끈거려요</b><br>
+          안심하고 사용하실 수 있도록 자극은 덜고 효과는 더했습니다.<br>
+          피부에 자극이 가지 않는 순한 효능 성분을 아낌없이 가득 채웠습니다<br>
+          피부 자극 없이 순한 비타민 케어 하세요
+        </p>
+        <img src="images/22.png" alt="" style="margin-top: 150px;" >
 
 
     </div>
