--- a/index.html
+++ b/index.html
@@ -1,115 +1,63 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>어반앤 씨즌 프레쉬 앰플</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="wrap">
-    <div class="container">
-      <img src="images/1.png" alt="">
-      <img src="images/1gif.gif" alt="" style="margin-bottom: 150px;">
-      <img src="images/2.png" alt="" style="margin-bottom: 150px;">
-      <img src="images/2gif.gif" alt="" style="margin-bottom: 200px;">
-      <img src="images/3gif.gif" alt="" style="margin-bottom: 200px;">
-      <img src="images/3.png" alt="">
-      <img src="images/4gif.gif" alt="" style="margin-bottom: 200px;">
-      <img src="images/4.png" alt="">
-      <p>
-        "<br>
-        여름만 되면 심해지는<br>
-        톤.잡.기 고민을 끝내기 위해<br>
-        효과만 생각하고 만들었습니다.<br>
-        "
-      </p>
-      <img src="images/5.png" alt="" style="margin-bottom: 150px;">
-      <p>왜 비타민C에요?</p>
-      <img src="images/6.png" alt="" >
-      <img src="images/5gif.gif" alt="" style="margin-top: 150px; margin-bottom: 200px;" >
-      <img src="images/7.png" alt="" style="margin-bottom: 200px;">
-      <img src="images/6gif.gif" alt="">
-      <img src="images/8.png" alt="" style="margin-bottom: 200px;">
-      <img src="images/7gif.gif" alt="" style="" >
-      <p>
-        비타민C가 함유된 화장품은 유통기한이 1년입니다.<br>
-        보통의 화장품들은 대부분 유통기한이 2~3년인데<br>
-        비타민C는 신선도가 저하되면 효과가 없는 것과 다름 없기에<br>
-        유통기한이 다른 화장품들에 비해 훨씬 짧습니다<br>
-        </p>
-      <img src="images/9.png" alt="" style="margin-top: 150px;" >
-      <img src="images/8gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/9gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/10.png" alt="" style="margin-top: 150px;" >
-      <p>
-        어반앤 비타민-씨즌 프레쉬 앰플은<br>
-        계절별 피부 고민에 맞춰<br>
-        매 달 좋은 성분을 다르게 함유합니다.<br><br>
-        그리고 최강의 효과를 위해 펀딩이 종료된 즉시<br>
-        신선하게 한정 수량만 만듭니다.<br>
-        미리 만들어주는 화장품이 아닙니다.<br>
-        비타민C 제품은 꼭 신선하게 사용하셔야 돼요!
-        </p>
-      <img src="images/11.png" alt="" style="margin-top: 150px;" >
-      <p>
-        연꽃잎과 매실의 조합!<br>
-        그린 솔루션으로 여름 피부 케어 공략!<br>
-      </p>
-      <img src="images/12.png" alt="" style="margin-bottom: 200px;">
-      <img src="images/13.png" alt="" style="margin-top: 150px;" >
-      <img src="images/10gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/11gif.gif" alt="" style="margin-top: 150px;" >
-      <img src="images/14.png" alt="" style="margin-top: 150px;" >
-      <p>
-      제조된 순간부터 산화가 빠르게 진행되는 비타민C는<br>
-      물과 만나는 순간 더욱 빠르게 산화가 진행되며 신선도 및 효과가 저하됩니다.<br><br>
-      게다가 다른 성분에 비해 비싼 원료 가격으로 인해 이익을 챙기기 위해서<br>
-      산화를 막지 못하는 저렴한 플라스틱 용기를 선택하기도 합니다.
-      </p>
-      <img src="images/15.png" alt="" style="margin-top: 150px;" >
-      <p>
-        원가를 절감하기 위해 사용되는<br>
-        진짜 비타민C가 아닌 비타민 유도체!<br><br>
-        화장품에 사용디는 비타민C 성분은 크게 '순수비타민C'와<br>
-        '비타민C유도체' 두 가지 종류로 나누어집니다.<br>
-        비타민C유도체는 '아스코빌글루코사이드'','아스코빌팔미테이트'<br>
-        '에칠아스코빌에텔','소듐아스코빌포스페이트'등으로 표기됩니다.
-        </p>
-        <img src="images/16.png" alt="" style="margin-top: 150px; margin-bottom: 200px;" >
-        <img src="images/17.png" alt="" style="margin-top: 150px;" >
-        <img src="images/12gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
-        <p>
-          비타민C가 함유된 화장품에 아무리 좋은 성분을 가득 넣어도<br>
-        물이 섞인다면 효능이 파괴되고 산화가 빠르게 진행되어<br>
-        시간이 지나면 일정한 농도 유지가 어려워서<br>
-        비타민C의 제 기능과 효과를 발휘하기가 어려워집니다.
-        </p>
-        <img src="images/18.png" alt="" style="margin-top: 150px;" >
-        <img src="images/13gif.gif" alt="" style="margin-top:20px; margin-bottom: 20px;">
-        <img src="images/19.png" alt="" >
-        <img src="images/14gif.gif" alt="" style="margin-top: 200px;margin-bottom: 200px; width: 100%;" >
-        <img src="images/20.png" alt="" style="margin-top: 150px;" >
-        <img src="images/15gif.gif" alt="" style="margin-top: 20px; width: 100%;" >
-        <p>
-          물은 피부에 닿았을 때 빠르게 증발하여<br>
-          과량의 비타민C만 피부 겉 표면에 남게 됩니다.<br>
-          피부 겉 표면에 남은 비타민C는 자극을 줄 수 있기에<br>
-          피부에 스며들기 이전에 비타민 앰플은 증발하면 안됩니다
-        </p>
-        <img src="images/16gif.gif" alt="" style="margin-top: 150px; width: 100%;" >
-        <img src="images/21.png" alt="" style="margin-top: 150px;" >
-        <p>
-          <b>비타민은 따갑고 화끈거려요</b><br>
-          안심하고 사용하실 수 있도록 자극은 덜고 효과는 더했습니다.<br>
-          피부에 자극이 가지 않는 순한 효능 성분을 아낌없이 가득 채웠습니다<br>
-          피부 자극 없이 순한 비타민 케어 하세요
-        </p>
-        <img src="images/22.png" alt="" style="margin-top: 150px;" >
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TIAMNEWS</title>
 
 
+    <div class="outer" style="width:100%;max-width:985px;background:#fffcec;margin: 100px auto;"><!--<![endif]-->
+        <table role="presentation" class="stb-one-col" style="width: 100%;border:0;" cellpadding="0" cellspacing="0">
+            <tbody>
+                <tr>
+                    <td style="text-align:center;font-size:0;box-sizing:border-box;"><img src="http://fireworks17.esellersimg.co.kr/tiam/newsletter/nl1.jpg" alt="" style="display:inline;vertical-align:bottom;text-align:center;max-width:100% !important;height:auto;border:0;" width="1000" class="stb-center"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table role="presentation" class="stb-one-col" style="width: 100%;border:0; " cellpadding="0" cellspacing="0">
+            <tbody>
+                <tr>
+                    <!-- 구글 드라이브 연결링크 -->
+                    <td style="text-align:center;font-size:0;box-sizing:border-box;">
+                        <a href="https://drive.google.com/drive/folders/1kS00Q-cGjO8m2QCBIaLXS6PozOJ-uyzq" target="_blank">
+                        <img src="http://fireworks17.esellersimg.co.kr/tiam/newsletter/Vduckbtn.png" alt="" style="display:inline;vertical-align:bottom;text-align: center;max-width:100% !important;height:auto;border:0;" width="auto" class="stb-center">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;font-size:0;box-sizing:border-box;">
+                        <img src="http://fireworks17.esellersimg.co.kr/tiam/newsletter/nl2.jpg" alt="" style="display:inline;vertical-align:bottom;text-align: center;max-width:100% !important;height:auto;border:0;" width="100%" class="stb-center">
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;font-size:0;box-sizing:border-box;padding-top: 50px;">
+                        <img src="http://fireworks17.esellersimg.co.kr/tiam/newsletter/fotter.png" alt="" style="display:inline;vertical-align:bottom;text-align: center;max-width:100% !important;height:auto;border:0;" width="100%" class="stb-center">
+                    </td>
+                </tr>
+            </tbody>
+        
+
+        </table><table width="100%" cellpadding="0" cellspacing="0" style="border:0; background-color: #000;">
+            <tbody>
+                <tr>
+                    <td style="border:0;padding:10px 10px 10px 10px;">
+                        <table class="stb-cell-wrap-sns" border="0" cellpadding="0" cellspacing="0" align="center" style="margin: 0 auto;font-family:noto sans kr, noto sans cjk kr, noto sans cjk, Malgun Gothic, apple sd gothic neo,     nanum gothic, malgun gothic, dotum, arial, helvetica, Meiryo, MS Gothic, sans-serif;text-align:center; ">
+                            <tbody>
+                                <tr style="padding: 0px; margin: 0px">
+                                    <td style="list-style: none; padding: 0 10px 0 0; margin: 0px;"><a target="_blank" href="https://tiamglobal.com/" style="padding: 0px 0; border-width: 0px; border-color: initial; border-image: initial; text-decoration: none; display: block; color: #0000ff;"><img src="https://resource.stibee.com/editor/icon/sns/homepage2-snsD.png" style="height: 30px; width: auto; vertical-align: middle" height="30" width="30"></a></td>
+                                                <td style="list-style: none; padding: 0 10px 0 10px; margin: 0px;"><a target="_blank" href="https://instagram.com/tiam_global?igshid=MzRlODBiNWFlZA==" style="padding: 0px 0; border-width: 0px; border-color: initial; border-image: initial; text-decoration: none; display: block; color: #0000ff;"><img src="https://resource.stibee.com/editor/icon/sns/instagram-snsD.png" style="height: 30px; width: auto; vertical-align: middle" height="30" width="30"></a></td>
+                                                    <td style="list-style: none; padding: 0 0 0 10px; margin: 0px;"><a target="_blank" href="https://www.tiktok.com/@tiam_official?is_from_webapp=1&amp;sender_device=pc" style="padding: 0px 0; border-width: 0px; border-color: initial; border-image: initial; text-decoration: none; display: block; color: #0000ff;">
+                                                            <img src="http://fireworks17.esellersimg.co.kr/tiam/newsletter/t-icon.png" style="height: 30px; width: auto; vertical-align: middle" height="30" width="30"></a></td>
+                                    <td style="list-style: none; padding: 0 10px 0 10px; margin: 0px;"><a target="_blank" href="https://www.youtube.com/@TIAMofficial" style="padding: 0px 0; border-width: 0px; border-color: initial; border-image: initial;margin-left: 10px; text-decoration: none; display: block; color: #0000ff;"><img src="https://resource.stibee.com/editor/icon/sns/youtube-snsD.png" style="height: 30px; width: auto; vertical-align: middle" height="30" width="30"></a></td>
+                                    <!--<td style="list-style: none; padding: 0 10px 0 10px; margin: 0px;"><a target="_blank"
+                                            href="https://twitter.com/TIAM_official"
+                                            style="padding: 0px 0; border-width: 0px; border-color: initial; border-image: initial; text-decoration: none; display: block; color: #0000ff;"><img
+                                                src="https://resource.stibee.com/editor/icon/sns/twitter-snsD.png"
+                                                style="height: 30px; width: auto; vertical-align: middle" height="30"
+                                                width="30"></a></td>-->
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-  </div>
-</body>
-</html>   
